feat(data-1232): handle SIRI FM subscriptions by single or multiple SiteRef(s)
* Map siteRefs field from ISHTAR subscription
* Generate X FM subscription (one by siteRef)
* According to SIRI FM standard, SiteRef maps to FacilityRef
* refactor and update FakeDataSender to produce SIRI FM data (one (or several) SiteRef is required in input subscription)